syntax = "proto3";

// just the top level namespace of this project, gets used for the autogenerated code:
option csharp_namespace = "PlatformService";

// we define the service/endpoint
service GrpcPlatform {
    rpc GetAllPlatforms(GetAllRequests) returns (PlatformResponse);
}

// this endpoint's input has no parameters but we still have to name it:
message GetAllRequests {}

// We define the shape of data that gets passed back (we wanna pass an array of those)
message GrpcPlatformModel {
    int32 platformId = 1;   // the 1 is not the value but the 'index' or position of where in GrpPlatformModel this gets placed
    string name = 2;
    string publisher = 3;
}

// an array of the above 'objects'
message PlatformResponse {
    repeated GrpcPlatformModel platform = 1;
}